hphp/hack/test/typecheck/reactive/reassign_mutable_or_immutable1.php
<?hh // strict

interface I {}

<<__Rx>>
function f(<<__MaybeMutable>>I $i): void {
  $j = $i;
}
